<resources>
    <string name="app_name">PreschooLearn</string>
    <string name="btn_start">START LEARNING</string>
    <string name="btn_shape">SHAPE</string>
    <string name="btn_color">COLOR</string>
    <string name="btn_alphabet">ALPHABET</string>
    <string name="btn_num">NUMBER</string>
    <string name="btn_quiz">QUIZ</string>
    <string name="txt_history">HISTORY</string>
    <string name="txt_category">CATEGORY</string>
    <string name="txt_shapes">SHAPES</string>
    <string name="txt_color">COLORS</string>
    <string name="txt_alphabet">ALPHABETS</string>
    <string name="txt_number">NUMBERS</string>
    <string name="txt_square">SQUARE</string>
    <string name="txt_star">STAR</string>
    <string name="txt_circle">CIRCLE</string>
    <string name="txt_rectangle">RECTANGLE</string>
    <string name="txt_diamond">DIAMOND</string>
    <string name="txt_triangle">TRIANGLE</string>
    <string name="txt_heart">HEART</string>
    <string name="txt_oval">OVAL</string>
    <string name="txt_a">Aa</string>
    <string name="txt_b">Bb</string>
    <string name="txt_c">Cc</string>
    <string name="txt_d">Dd</string>
    <string name="txt_e">Ee</string>
    <string name="txt_f">Ff</string>
    <string name="txt_g">Gg</string>
    <string name="txt_h">Hh</string>
    <string name="txt_i">Ii</string>
    <string name="txt_j">Jj</string>
    <string name="txt_k">Kk</string>
    <string name="txt_l">Ll</string>
    <string name="txt_m">Mm</string>
    <string name="txt_n">Nn</string>
    <string name="txt_o">Oo</string>
    <string name="txt_p">Pp</string>
    <string name="txt_q">Qq</string>
    <string name="txt_r">Rr</string>
    <string name="txt_s">Ss</string>
    <string name="txt_t">Tt</string>
    <string name="txt_u">Uu</string>
    <string name="txt_v">Vv</string>
    <string name="txt_w">Ww</string>
    <string name="txt_x">Xx</string>
    <string name="txt_y">Yy</string>
    <string name="txt_z">Zz</string>
    <string name="txt_blue">BLUE</string>
    <string name="txt_red">RED</string>
    <string name="txt_yellow">YELLOW</string>
    <string name="txt_orange">ORANGE</string>
    <string name="txt_purple">PURPLE</string>
    <string name="txt_green">GREEN</string>
    <string name="txt_one">ONE</string>
    <string name="txt_two">TWO</string>
    <string name="txt_three">THREE</string>
    <string name="txt_four">FOUR</string>
    <string name="txt_five">FIVE</string>
    <string name="txt_six">SIX</string>
    <string name="txt_seven">SEVEN</string>
    <string name="txt_eight">EIGHT</string>
    <string name="txt_nine">NINE</string>
    <string name="txt_ten">TEN</string>
</resources>